tests/build/cases/widget_new/cannot_unset_required2.stderr
error: cannot unset required property `foo`
  --> $DIR/cannot_unset_required2.rs:20:15
   |
20 |         foo = unset!;
   |               ^^^^^

error: missing required property `foo`
  --> $DIR/cannot_unset_required2.rs:3:1
   |
3  |   #[widget($crate::test_widget)]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
19 |       let _ = test_widget! {
   |  _____________-
20 | |         foo = unset!;
21 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in the macro `test_widget` (in Nightly builds, run with -Z macro-backtrace for more info)
